# myRep

./: 1.py  2.1.py  2.3.py  CMakeLists.txt  README.md  bee.cpp
Lab7cmake/inc/: Sun.h
lab5_2cmake/: CMakeLists.txt  input.txt  lab5_2.cpp
sample/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sfml_sample.sln  sfml_sample.vcxproj  sfml_sample.vcxproj.filters
src/: Flower.cpp
